--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -312,6 +312,25 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/Level/Map_Main
@@ -549,7 +568,7 @@ Enum="\"Object\" "
 Field="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [DetailCategories]
@@ -2577,8 +2596,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=210.000 Y=113.333
-WindowSize=X=1282.000 Y=788.000
+ScreenPosition=X=210.000 Y=112.667
+WindowSize=X=1284.000 Y=790.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
