--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -216,7 +216,7 @@ BP_Turntable_Star_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacte
 Object=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,
 WBP_View_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 EdGraph=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
-SphereComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
+SphereComponent=
 BP_Overturn_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 BP_Turntable_Hollow_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Once_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
@@ -260,6 +260,12 @@ BP_Seesaw_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C
 BP_Seesaw_Swing_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Seesaw_ObSwing_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CameraComponent.PostProcess.Lens,
 BP_Seesaw_Swing1_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
+BP_WindMill_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
+BP_WindMill_Base_L_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
+BP_WindMill_Base_M_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
+BP_WindMill_3way_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
+BP_WindMill_3way_M_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
+BP_WindMill_3way_L_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Actor
@@ -282,7 +288,7 @@ ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=/Game/Actor,/Game/Player,/Game/Curve,/Game/Meterial
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
-ContentBrowserTab1.ThumbnailSize=3
+ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 SequenceBrowser.ThumbnailSize=2
 SequenceBrowser.CurrentViewType=2
@@ -2330,50 +2336,128 @@ BP_Seesaw_Swing1_C.Actor=True
 BP_Seesaw_Swing1_C.Tick=True
 BP_Seesaw_Swing1_C.WorldPartition=True
 BP_Seesaw_Swing1_C.Events=True
+BP_WindMill_Base_C.默认=True
+BP_WindMill_Base_C.Tick=True
+BP_WindMill_Base_C.Replication=True
+BP_WindMill_Base_C.Rendering=True
+BP_WindMill_Base_C.Collision=True
+BP_WindMill_Base_C.Actor=True
+BP_WindMill_Base_C.Input=True
+BP_WindMill_Base_C.HLOD=True
+BP_WindMill_Base_C.Physics=True
+BP_WindMill_Base_C.WorldPartition=True
+BP_WindMill_Base_C.Events=True
+BP_WindMill_Base_C.TransformCommon=True
+BP_WindMill_Base_C.Networking=True
+BP_WindMill_Base_M_C.默认=True
+BP_WindMill_Base_M_C.Tick=True
+BP_WindMill_Base_M_C.Replication=True
+BP_WindMill_Base_M_C.Rendering=True
+BP_WindMill_Base_M_C.Collision=True
+BP_WindMill_Base_M_C.Actor=True
+BP_WindMill_Base_M_C.Input=True
+BP_WindMill_Base_M_C.HLOD=True
+BP_WindMill_Base_M_C.Physics=True
+BP_WindMill_Base_M_C.WorldPartition=True
+BP_WindMill_Base_M_C.Events=True
+BP_WindMill_Base_L_C.默认=True
+BP_WindMill_Base_L_C.Tick=True
+BP_WindMill_Base_L_C.Replication=True
+BP_WindMill_Base_L_C.Rendering=True
+BP_WindMill_Base_L_C.Collision=True
+BP_WindMill_Base_L_C.Actor=True
+BP_WindMill_Base_L_C.Input=True
+BP_WindMill_Base_L_C.HLOD=True
+BP_WindMill_Base_L_C.Physics=True
+BP_WindMill_Base_L_C.WorldPartition=True
+BP_WindMill_Base_L_C.Events=True
+BP_WindMill_Base_L_C.TransformCommon=True
+BP_WindMill_Base_L_C.Networking=True
+BP_WindMill_Base_M_C.TransformCommon=True
+BP_WindMill_Base_M_C.Networking=True
+BP_WindMill_3way_C.默认=True
+BP_WindMill_3way_C.Tick=True
+BP_WindMill_3way_C.Replication=True
+BP_WindMill_3way_C.Rendering=True
+BP_WindMill_3way_C.Collision=True
+BP_WindMill_3way_C.Actor=True
+BP_WindMill_3way_C.Input=True
+BP_WindMill_3way_C.HLOD=True
+BP_WindMill_3way_C.Physics=True
+BP_WindMill_3way_C.WorldPartition=True
+BP_WindMill_3way_C.Events=True
+BP_WindMill_3way_C.TransformCommon=True
+BP_WindMill_3way_C.Networking=True
+BP_WindMill_3way_M_C.默认=True
+BP_WindMill_3way_M_C.Tick=True
+BP_WindMill_3way_M_C.Replication=True
+BP_WindMill_3way_M_C.Rendering=True
+BP_WindMill_3way_M_C.Collision=True
+BP_WindMill_3way_M_C.Actor=True
+BP_WindMill_3way_M_C.Input=True
+BP_WindMill_3way_M_C.HLOD=True
+BP_WindMill_3way_M_C.Physics=True
+BP_WindMill_3way_M_C.WorldPartition=True
+BP_WindMill_3way_M_C.Events=True
+BP_WindMill_3way_L_C.默认=True
+BP_WindMill_3way_L_C.Tick=True
+BP_WindMill_3way_L_C.Replication=True
+BP_WindMill_3way_L_C.Rendering=True
+BP_WindMill_3way_L_C.Collision=True
+BP_WindMill_3way_L_C.Actor=True
+BP_WindMill_3way_L_C.Input=True
+BP_WindMill_3way_L_C.HLOD=True
+BP_WindMill_3way_L_C.Physics=True
+BP_WindMill_3way_L_C.WorldPartition=True
+BP_WindMill_3way_L_C.Events=True
+BP_WindMill_3way_M_C.TransformCommon=True
+BP_WindMill_3way_M_C.Networking=True
+BP_WindMill_3way_L_C.TransformCommon=True
+BP_WindMill_3way_L_C.Networking=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Actor/BP_Seesaw_Base
-MRUItem1=/Game/Curve/CF_Transverse
-MRUItem2=/Game/Actor/BP_Seesaw_Swing1
-MRUItem3=/Game/Actor/BP_Seesaw_ObstacleSwing
-MRUItem4=/Game/Curve/CF_Transverse_Swing
-MRUItem5=/Game/Actor/BP_Seesaw_Swing
-MRUItem6=/Game/Actor/BP_Overturn
-MRUItem7=/Game/Actor/Seesaw/BP_Seesaw_Base_M
-MRUItem8=/Game/Actor/Seesaw/BP_Seesaw_Base
-MRUItem9=/Game/Actor/Seesaw/BP_Punch
-MRUItem10=/Game/Actor/BP_Punch
-MRUItem11=/Game/Actor/BP_Static
-MRUItem12=/Game/Actor/RoundTable/BP_HollowTable_Ring_L
-MRUItem13=/Game/Actor/RoundTable/BP_HollowTable_Ring_M
-MRUItem14=/Game/Actor/RoundTable/BP_HollowTable_Ring
-MRUItem15=/Game/Actor/RoundTable/BP_RoundTable_Maze
-MRUItem16=/Game/Actor/RoundTable/BP_RoundTable_Cross_L
-MRUItem17=/Game/Actor/RoundTable/BP_RoundTable_Cross_M
-MRUItem18=/Game/Curve/CF_RoundTable/CF_RoundTable_Plat
-MRUItem19=/Game/Actor/RoundTable/BP_RoundTable_Cross
+MRUItem0=/Game/Actor/RoundTable/BP_WindMill_3way
+MRUItem1=/Game/Actor/RoundTable/BP_WindMill_Base
+MRUItem2=/Game/Actor/RoundTable/BP_WindMill_3way_L
+MRUItem3=/Game/Actor/RoundTable/BP_WindMill_3way_M
+MRUItem4=/Game/Actor/RoundTable/BP_WindMill_Base_L
+MRUItem5=/Game/Actor/RoundTable/BP_WindMill_Base_M
+MRUItem6=/Game/Actor/RoundTable/BP_RoundTable_3way
+MRUItem7=/Game/Curve/CF_RoundTable/CF_WindMill_Base
+MRUItem8=/Game/Actor/BP_Pendulum
+MRUItem9=/Game/Actor/BP_Seesaw_Base
+MRUItem10=/Game/Curve/CF_Transverse
+MRUItem11=/Game/Actor/BP_Seesaw_Swing1
+MRUItem12=/Game/Actor/BP_Seesaw_ObstacleSwing
+MRUItem13=/Game/Curve/CF_Transverse_Swing
+MRUItem14=/Game/Actor/BP_Seesaw_Swing
+MRUItem15=/Game/Actor/BP_Overturn
+MRUItem16=/Game/Actor/Seesaw/BP_Seesaw_Base_M
+MRUItem17=/Game/Actor/Seesaw/BP_Seesaw_Base
+MRUItem18=/Game/Actor/Seesaw/BP_Punch
+MRUItem19=/Game/Actor/BP_Punch
 
 [PlacementMode]
-RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_3way_M.BP_RoundTable_3way_M;
+RecentlyPlaced=/Game/Actor/BP_Star.BP_Star;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring_M.BP_HollowTable_Ring_M;
 RecentlyPlaced=/Game/Actor/BP_Seesaw_Swing1.BP_Seesaw_Swing1;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Base_L.BP_HollowTable_Base_L;
 RecentlyPlaced=/Game/Actor/BP_Seesaw_ObSwing.BP_Seesaw_ObSwing;
+RecentlyPlaced=/Game/Actor/BP_Seesaw_Base.BP_Seesaw_Base;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_3way.BP_RoundTable_3way;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_3way_M.BP_RoundTable_3way_M;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_3way_L.BP_WindMill_3way_L;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_3way_M.BP_WindMill_3way_M;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_3way.BP_WindMill_3way;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_Base_M.BP_WindMill_Base_M;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_Base_L.BP_WindMill_Base_L;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_Base.BP_WindMill_Base;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_2way_L.BP_RoundTable_2way_L;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_2way_M.BP_RoundTable_2way_M;
-RecentlyPlaced=/Game/Actor/BP_Star.BP_Star;
 RecentlyPlaced=/Game/Actor/BP_Static.BP_Static;
-RecentlyPlaced=/Game/Actor/BP_Seesaw_Base.BP_Seesaw_Base;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Cross_M.BP_RoundTable_Cross_M;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_3way.BP_RoundTable_3way;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring.BP_HollowTable_Ring;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Base.BP_HollowTable_Base;
-RecentlyPlaced=/Game/Actor/Once/BP_Once_Base.BP_Once_Base;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring_M.BP_HollowTable_Ring_M;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Cross_L.BP_RoundTable_Cross_L;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Base_M.BP_RoundTable_Base_M;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_2way.BP_RoundTable_2way;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring_L.BP_HollowTable_Ring_L;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Base_L.BP_RoundTable_Base_L;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Cross.BP_RoundTable_Cross;
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Meshes/SM_Cube.SM_Cube=1
@@ -2499,6 +2583,13 @@ RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Cross.BP_RoundTable_Cross;
 /Game/Actor/BP_Seesaw_ObstacleSwing.BP_Seesaw_ObstacleSwing=1
 /Game/Actor/BP_Seesaw_ObSwing.BP_Seesaw_ObSwing=1
 /Game/Actor/BP_Seesaw_Swing1.BP_Seesaw_Swing1=1
+/Game/Curve/CF_RoundTable/CF_WindMill_Base.CF_WindMill_Base=1
+/Game/Actor/RoundTable/BP_WindMill_Base_M.BP_WindMill_Base_M=1
+/Game/Actor/RoundTable/BP_WindMill_Base_L.BP_WindMill_Base_L=1
+/Game/Actor/RoundTable/BP_WindMill_Base.BP_WindMill_Base=1
+/Game/Actor/RoundTable/BP_WindMill_3way.BP_WindMill_3way=1
+/Game/Actor/RoundTable/BP_WindMill_3way_M.BP_WindMill_3way_M=1
+/Game/Actor/RoundTable/BP_WindMill_3way_L.BP_WindMill_3way_L=1
 
 [MessageLog]
 LastLogListing=BlueprintLog
@@ -2559,6 +2650,7 @@ SphereComponent.Rendering=False
 BoxComponent.Shape=True
 SoundWave.Loading=False
 UserDefinedEnum.Enumerators=False
+CapsuleComponent.Shape=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -2577,7 +2669,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=-1445.000 Y=61.000
+ScreenPosition=X=219.000 Y=119.000
 WindowSize=X=1280.000 Y=786.000
 InitiallyMaximized=True
 
