--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -152,10 +152,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1,VisualizeGPUSkinCache=0,ShaderPrint=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1,VisualizeGPUSkinCache=0,ShaderPrint=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",GPUSkinCacheVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 CurrentRotGridSize=0
 CameraSpeed=5
+CurrentPosGridSize=3
 
 [MRU]
 MRUItem0=/Game/Level/Map_Main
-MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem1=/Game/Level/1
+MRUItem2=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailCustomWidgetExpansion]
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Input/Action/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/Input/Action/IA_Jump.IA_Jump,InputMappingContext.Mappings.ActionMappings./Game/Input/Action/IA_Look.IA_Look,
@@ -171,7 +173,7 @@ K2Node_EnhancedInputAction=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonC
 CameraComponent=CameraComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,
 CapsuleComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Tide_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
-SceneComponent=
+SceneComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 K2Node_VariableGet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 PropertyWrapper=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 K2Node_VariableSet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
@@ -215,7 +217,7 @@ BP_Turntable_Star_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacte
 Object=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,
 WBP_View_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 EdGraph=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
-SphereComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CameraComponent.PostProcess.Lens,
+SphereComponent=
 BP_Overturn_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 BP_Turntable_Hollow_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Once_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
@@ -558,10 +560,8 @@ BP_HollowTable_Base_M_C="\"Object\" "
 BP_HollowTable_Base_L_C="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Actor/RoundTable/BP_WindMill_Base.BP_WindMill_Base
-OpenAssetsAtExit=/Game/Actor/RoundTable/BP_WindMill_3way.BP_WindMill_3way
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2421,43 +2421,43 @@ BP_WindMill_3way_L_C.TransformCommon=True
 BP_WindMill_3way_L_C.Networking=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Actor/RoundTable/BP_WindMill_Base
-MRUItem1=/Game/Actor/RoundTable/BP_WindMill_3way
-MRUItem2=/Game/Curve/CF_RoundTable/CF_RoundTable_Fast
-MRUItem3=/Game/Curve/CF_RoundTable/CF_RoundTable_Slow
-MRUItem4=/Game/Curve/CF_RoundTable/CF_RoundTable_ExSlow
-MRUItem5=/Game/Curve/CF_RoundTable/CF_RoundTable_Base
-MRUItem6=/Game/Curve/CF_RoundTable/CF_WindMill_Base
-MRUItem7=/Game/Curve/CF_RoundTable/CF_Rover_Base
-MRUItem8=/Game/Actor/BP_WindMill_Base
-MRUItem9=/Game/Actor/RoundTable/BP_WindMill_3way_L
-MRUItem10=/Game/Actor/RoundTable/BP_WindMill_3way_M
-MRUItem11=/Game/Actor/RoundTable/BP_WindMill_Base_L
-MRUItem12=/Game/Actor/RoundTable/BP_WindMill_Base_M
-MRUItem13=/Game/Actor/RoundTable/BP_RoundTable_3way
-MRUItem14=/Game/Actor/BP_Pendulum
-MRUItem15=/Game/Actor/BP_Seesaw_Base
-MRUItem16=/Game/Curve/CF_Transverse
-MRUItem17=/Game/Actor/BP_Seesaw_Swing1
-MRUItem18=/Game/Actor/BP_Seesaw_ObstacleSwing
-MRUItem19=/Game/Curve/CF_Transverse_Swing
+MRUItem0=/Game/Level/Map_Main
+MRUItem1=/Game/Level/1
+MRUItem2=/Game/Actor/RoundTable/BP_WindMill_Base
+MRUItem3=/Game/Actor/RoundTable/BP_WindMill_3way
+MRUItem4=/Game/Curve/CF_RoundTable/CF_RoundTable_Fast
+MRUItem5=/Game/Curve/CF_RoundTable/CF_RoundTable_Slow
+MRUItem6=/Game/Curve/CF_RoundTable/CF_RoundTable_ExSlow
+MRUItem7=/Game/Curve/CF_RoundTable/CF_RoundTable_Base
+MRUItem8=/Game/Curve/CF_RoundTable/CF_WindMill_Base
+MRUItem9=/Game/Curve/CF_RoundTable/CF_Rover_Base
+MRUItem10=/Game/Actor/BP_WindMill_Base
+MRUItem11=/Game/Actor/RoundTable/BP_WindMill_3way_L
+MRUItem12=/Game/Actor/RoundTable/BP_WindMill_3way_M
+MRUItem13=/Game/Actor/RoundTable/BP_WindMill_Base_L
+MRUItem14=/Game/Actor/RoundTable/BP_WindMill_Base_M
+MRUItem15=/Game/Actor/RoundTable/BP_RoundTable_3way
+MRUItem16=/Game/Actor/BP_Pendulum
+MRUItem17=/Game/Actor/BP_Seesaw_Base
+MRUItem18=/Game/Curve/CF_Transverse
+MRUItem19=/Game/Actor/BP_Seesaw_Swing1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Actor/BP_Star.BP_Star;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_Base.BP_WindMill_Base;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring_M.BP_HollowTable_Ring_M;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring.BP_HollowTable_Ring;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring_L.BP_HollowTable_Ring_L;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Base_L.BP_HollowTable_Base_L;
+RecentlyPlaced=/Game/Actor/BP_Seesaw_Base.BP_Seesaw_Base;
+RecentlyPlaced=/Game/Actor/BP_Seesaw_ObSwing.BP_Seesaw_ObSwing;
+RecentlyPlaced=/Game/Actor/Once/BP_Once_Base.BP_Once_Base;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Cross_M.BP_RoundTable_Cross_M;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_2way_M.BP_RoundTable_2way_M;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_Base.BP_WindMill_Base;
-RecentlyPlaced=/Game/Actor/BP_Star.BP_Star;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_3way_M.BP_WindMill_3way_M;
-RecentlyPlaced=/Game/Actor/Once/BP_Once_Base.BP_Once_Base;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_2way.BP_RoundTable_2way;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_Base_L.BP_WindMill_Base_L;
-RecentlyPlaced=/Game/Actor/BP_Seesaw_ObSwing.BP_Seesaw_ObSwing;
-RecentlyPlaced=/Game/Actor/BP_Seesaw_Base.BP_Seesaw_Base;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring.BP_HollowTable_Ring;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Cross.BP_RoundTable_Cross;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring_M.BP_HollowTable_Ring_M;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Base_L.BP_HollowTable_Base_L;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Base_M.BP_HollowTable_Base_M;
 RecentlyPlaced=/Game/Actor/BP_WindMill_Base.BP_WindMill_Base;
 RecentlyPlaced=/Game/Meterial/MI_Solid_Star.MI_Solid_Star;
