--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -217,7 +217,7 @@ BP_Turntable_Star_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacte
 Object=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,
 WBP_View_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 EdGraph=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
-SphereComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CameraComponent.PostProcess.Lens,
+SphereComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Overturn_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 BP_Turntable_Hollow_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Once_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
@@ -273,7 +273,7 @@ BP_Wander_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C
 BP_TweenSector_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Actor/RoundTable
+ContentBrowserTab1.SelectedPaths=/Game/Actor
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -565,7 +565,7 @@ K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [DetailCategories]
@@ -2499,28 +2499,34 @@ BP_Wander_Base_L_C.TransformCommon=True
 BP_Wander_Base_L_C.Networking=True
 BP_Wander_Base_M_C.TransformCommon=True
 BP_Wander_Base_M_C.Networking=True
+BP_Seesaw_ObSwing_C.Tick=True
+BP_Seesaw_ObSwing_C.WorldPartition=True
+BP_Seesaw_ObSwing_C.Events=True
+BP_Rover_Base_C.Tick=True
+BP_Rover_Base_C.WorldPartition=True
+BP_Rover_Base_C.Events=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Actor/RoundTable/BP_Wander_Base_L
-MRUItem1=/Game/Actor/RoundTable/BP_Wander_Base
-MRUItem2=/Game/Curve/CF_Once/CF_SizeSmall
-MRUItem3=/Game/Curve/CF_Once/CF_SizeBorn
-MRUItem4=/Game/Actor/BP_TweenSector_Base
-MRUItem5=/Game/Actor/RoundTable/BP_Wander_Base_M
-MRUItem6=/Game/Actor/BP_WindMill_Base
-MRUItem7=/Game/Level/Map_Main
-MRUItem8=/Game/Level/1
-MRUItem9=/Game/Actor/RoundTable/BP_WindMill_Base
-MRUItem10=/Game/Actor/RoundTable/BP_WindMill_3way
-MRUItem11=/Game/Curve/CF_RoundTable/CF_RoundTable_Fast
-MRUItem12=/Game/Curve/CF_RoundTable/CF_RoundTable_Slow
-MRUItem13=/Game/Curve/CF_RoundTable/CF_RoundTable_ExSlow
-MRUItem14=/Game/Curve/CF_RoundTable/CF_RoundTable_Base
-MRUItem15=/Game/Curve/CF_RoundTable/CF_WindMill_Base
-MRUItem16=/Game/Curve/CF_RoundTable/CF_Rover_Base
-MRUItem17=/Game/Actor/RoundTable/BP_WindMill_3way_L
-MRUItem18=/Game/Actor/RoundTable/BP_WindMill_3way_M
-MRUItem19=/Game/Actor/RoundTable/BP_WindMill_Base_L
+MRUItem0=/Game/Actor/BP_Rover_Base
+MRUItem1=/Game/Actor/BP_TweenSector_Base
+MRUItem2=/Game/Actor/BP_Static
+MRUItem3=/Game/Actor/RoundTable/BP_Wander_Base
+MRUItem4=/Game/Actor/RoundTable/BP_WindMill_3way
+MRUItem5=/Game/Actor/RoundTable/BP_WindMill_Base
+MRUItem6=/Game/Actor/RoundTable/BP_RoundTable_Cross
+MRUItem7=/Game/Actor/RoundTable/BP_HollowTable_Base
+MRUItem8=/Game/Actor/BP_Seesaw_ObSwing
+MRUItem9=/Game/Actor/BP_Seesaw_Base
+MRUItem10=/Game/Actor/RoundTable/BP_Wander_Base_L
+MRUItem11=/Game/Curve/CF_Once/CF_SizeSmall
+MRUItem12=/Game/Curve/CF_Once/CF_SizeBorn
+MRUItem13=/Game/Actor/RoundTable/BP_Wander_Base_M
+MRUItem14=/Game/Actor/BP_WindMill_Base
+MRUItem15=/Game/Level/Map_Main
+MRUItem16=/Game/Level/1
+MRUItem17=/Game/Curve/CF_RoundTable/CF_RoundTable_Fast
+MRUItem18=/Game/Curve/CF_RoundTable/CF_RoundTable_Slow
+MRUItem19=/Game/Curve/CF_RoundTable/CF_RoundTable_ExSlow
 
 [PlacementMode]
 RecentlyPlaced=/Game/Actor/BP_Star.BP_Star;
@@ -2680,6 +2686,7 @@ RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Cross.BP_RoundTable_Cross;
 /Game/Actor/RoundTable/BP_Wander_Base.BP_Wander_Base=1
 /Game/Actor/BP_TweenSector_Base.BP_TweenSector_Base=1
 /Game/Actor/RoundTable/BP_Wander_Base_L.BP_Wander_Base_L=1
+/Game/Actor/BP_Rover_Base.BP_Rover_Base=1
 
 [MessageLog]
 LastLogListing=BlueprintLog
@@ -2759,7 +2766,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=-1755.000 Y=126.000
+ScreenPosition=X=-1656.000 Y=98.000
 WindowSize=X=1280.000 Y=786.000
 InitiallyMaximized=True
 
