--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -172,7 +172,7 @@ K2Node_EnhancedInputAction=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonC
 CameraComponent=CameraComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,
 CapsuleComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Tide_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
-SceneComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
+SceneComponent=
 K2Node_VariableGet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 PropertyWrapper=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 K2Node_VariableSet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
@@ -272,6 +272,7 @@ BP_Wander_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C
 BP_TweenSector_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Wander_Base_L_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Hammer_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
+BP_Wander_Base_M_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Actor/RoundTable
@@ -331,14 +332,14 @@ LastLevel=/Game/Level/Map_Main
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object="\"Object\" "
 LocalizationTargetSet="\"Object\" "
 LocalizationTarget="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
-PrimitiveComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" "
@@ -566,9 +567,8 @@ K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Actor/BP_Hammer_Base.BP_Hammer_Base
 OpenAssetsAtExit=/Game/Actor/RoundTable/BP_Wander_Base.BP_Wander_Base
 
 [DetailCategories]
@@ -2521,6 +2521,8 @@ BP_Hammer_Base_C.WorldPartition=True
 BP_Hammer_Base_C.Events=True
 BP_Hammer_Base_C.TransformCommon=True
 BP_Hammer_Base_C.Networking=True
+BP_HollowTable_Base_M_C.TransformCommon=True
+BP_HollowTable_Base_M_C.Networking=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Actor/RoundTable/BP_Wander_Base
@@ -2545,26 +2547,26 @@ MRUItem18=/Game/Level/Map_Main
 MRUItem19=/Game/Level/1
 
 [PlacementMode]
-RecentlyPlaced=/Game/Actor/RoundTable/BP_Wander_Base.BP_Wander_Base;
-RecentlyPlaced=/Game/Actor/BP_Rover_Base.BP_Rover_Base;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Cross_M.BP_RoundTable_Cross_M;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Base_M.BP_RoundTable_Base_M;
 RecentlyPlaced=/Game/Actor/BP_Star.BP_Star;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_Wander_Base.BP_Wander_Base;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_Wander_Base_M.BP_Wander_Base_M;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Base_M.BP_HollowTable_Base_M;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Base.BP_HollowTable_Base;
+RecentlyPlaced=/Game/Actor/BP_TweenSector_Base.BP_TweenSector_Base;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_Wander_Base_L.BP_Wander_Base_L;
 RecentlyPlaced=/Game/Actor/BP_Hammer_Base.BP_Hammer_Base;
-RecentlyPlaced=/Game/Actor/BP_TweenSector_Base.BP_TweenSector_Base;
 RecentlyPlaced=/Game/Actor/Once/BP_Once_Base.BP_Once_Base;
-RecentlyPlaced=/Game/Actor/BP_Static.BP_Static;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_Wander_Base_M.BP_Wander_Base_M;
-RecentlyPlaced=/Game/Actor/BP_Seesaw_Base.BP_Seesaw_Base;
-RecentlyPlaced=/Game/Actor/BP_Seesaw_Swing1.BP_Seesaw_Swing1;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_Base.BP_WindMill_Base;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring_M.BP_HollowTable_Ring_M;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring.BP_HollowTable_Ring;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring_L.BP_HollowTable_Ring_L;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_Base.BP_WindMill_Base;
+RecentlyPlaced=/Game/Actor/BP_Rover_Base.BP_Rover_Base;
+RecentlyPlaced=/Game/Actor/BP_Seesaw_Base.BP_Seesaw_Base;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Cross_M.BP_RoundTable_Cross_M;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Base_M.BP_RoundTable_Base_M;
+RecentlyPlaced=/Game/Actor/BP_Static.BP_Static;
+RecentlyPlaced=/Game/Actor/BP_Seesaw_Swing1.BP_Seesaw_Swing1;
+RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring.BP_HollowTable_Ring;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Base_L.BP_HollowTable_Base_L;
-RecentlyPlaced=/Game/Actor/BP_Seesaw_ObSwing.BP_Seesaw_ObSwing;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_2way_M.BP_RoundTable_2way_M;
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Meshes/SM_Cube.SM_Cube=1
